--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <div class="content about-content center-stage">
   <h1>About</h1>
   <div class="feature-wrapper">
-    <div class="content-wrapper clearfix below-view" viewportCheck >
+    <div class="content-wrapper clearfix below-view" viewportCheck>
       <div class="main">
         <h2>Hi! I am Jayabratha Saha, friends call me Jay.</h2>
         <i class="icon-android-compass"></i>
@@ -29,38 +29,26 @@
   </div>
   <section class="my-tiles">
     <h2>Tech Skills</h2>
-    <div class="skills-wrapper" viewportCheck [padding]=100 (enteredViewport)="animateSkills()">
+    <div class="skills-wrapper" viewportCheck (enteredViewport)="animateSkills()">
       <div class="tiles-container">
-        <ul class="clearfix skill-list">
-          <li class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
-            <div #skillItem class="tile-wrapper small angular hide">
-              <i class="icon-social-angular"></i>
-            </div>
+        <ul class="flex-wrapper skill-list">
+          <li #skillItem class="tile-wrapper small angular hide">
+            <i class="icon-social-angular"></i>
           </li>
-          <li class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
-            <div #skillItem class="tile-wrapper small js hide">
-              <i class="icon-social-javascript"></i>
-            </div>
+          <li #skillItem class="tile-wrapper small js hide">
+            <i class="icon-social-javascript"></i>
           </li>
-          <li class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
-            <div #skillItem class="tile-wrapper small html hide">
-              <i class="icon-social-html5"></i>
-            </div>
+          <li #skillItem class="tile-wrapper small html hide">
+            <i class="icon-social-html5"></i>
           </li>
-          <li class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
-            <div #skillItem class="tile-wrapper small css hide">
-              <i class="icon-social-css3"></i>
-            </div>
+          <li #skillItem class="tile-wrapper small css hide">
+            <i class="icon-social-css3"></i>
           </li>
-          <li class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
-            <div #skillItem class="tile-wrapper small firebase hide">
-              <img src="../../assets/firebase-logo.png" alt="Firebase" />
-            </div>
+          <li #skillItem class="tile-wrapper small firebase hide">
+            <img src="../../assets/firebase-logo.png" alt="Firebase" />
           </li>
-          <li class="col-xs-3 col-sm-2 col-md-2 col-lg-2">
-            <div #skillItem class="tile-wrapper small ts hide">
-              <img src="../../assets/typescript-logo.png" alt="TypeScript" />
-            </div>
+          <li #skillItem class="tile-wrapper small ts hide">
+            <img src="../../assets/typescript-logo.png" alt="TypeScript" />
           </li>
         </ul>
       </div>
@@ -74,7 +62,7 @@
     <h2>Work Experience</h2>
     <div class="exp-container">
       <ul>
-        <li viewportCheck  [padding]=100>
+        <li viewportCheck [padding]=100>
           <div #expItem class="exp-wrapper clearfix">
             <div class="logo-wrapper">
               <img src="assets/sgm-logo.png" />
@@ -93,7 +81,7 @@
             </div>
           </div>
         </li>
-        <li viewportCheck  [padding]=100>
+        <li viewportCheck [padding]=100>
           <div #expItem class="exp-wrapper clearfix">
             <div class="logo-wrapper">
               <img src="assets/tcs-logo.png" />
