--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -75,19 +75,19 @@ button.submit-contact {
     color: #ffffff;
 }
 
-.tile-wrapper.facebook {
+.facebook {
     background-color: #3b5998;
 }
 
-.tile-wrapper.instagram {
+.instagram {
     background-color: #ffffff;
 }
 
-.tile-wrapper.linkedin {
+.linkedin {
     background-color: #0077b5;
 }
 
-.tile-wrapper.whatsapp {
+.whatsapp {
     background-color: #25D366;
 }
 
