Cretaing Blog article and other important updates

--- a/src/app/blog/blog-list/blog-list.component.html
+++ b/src/app/blog/blog-list/blog-list.component.html
@@ -1,14 +1,20 @@
 <div class="content blog-content center-stage">
   <h1>Blog</h1>
   <div class="feature-wrapper">
-    <div class="content-wrapper clearfix below-view" viewportCheck >
+    <div class="content-wrapper clearfix below-view" viewportCheck>
       <div class="main">
         <h2>My blogs posts</h2>
         <i class="icon-ios-chatboxes"></i>
       </div>
       <div class="blog-card featured-blog">
         <div class="title">
-          <h3>Coming soon..</h3>
+          <h3>Sample Blog</h3>
+          <a routerLink="/blog/new-article">
+            <div class="button-wrapper">
+              <div class="background"></div>
+              <button>READ</button>
+            </div>
+          </a>
         </div>
       </div>
     </div>
