--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -28,7 +28,7 @@
           <a href="https://github.com/Jayabratha/my-portfolio">
             <div class="button-wrapper">
               <div class="background"></div>
-              <button routerLink="/projects">VIEW PROJECT</button>
+              <button>VIEW PROJECT</button>
             </div>
           </a>
         </div>
@@ -68,7 +68,7 @@
           <a href="https://github.com/Jayabratha/mean-demo-app">
             <div class="button-wrapper">
               <div class="background"></div>
-              <button routerLink="/projects">VIEW PROJECT</button>
+              <button>VIEW PROJECT</button>
             </div>
           </a>
         </div>
@@ -97,7 +97,7 @@
           <a href="https://github.com/Jayabratha/mean-microservices-demo">
             <div class="button-wrapper">
               <div class="background"></div>
-              <button routerLink="/projects">VIEW PROJECT</button>
+              <button>VIEW PROJECT</button>
             </div>
           </a>
         </div>
@@ -124,7 +124,7 @@
           <a href="https://github.com/Jayabratha/js-angular-carousel">
             <div class="button-wrapper">
               <div class="background"></div>
-              <button routerLink="/projects">VIEW PROJECT</button>
+              <button>VIEW PROJECT</button>
             </div>
           </a>
         </div>
