--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -162,7 +162,7 @@ p.sub_desc {
     transform: translate3d(0, 0, 0);
     flex-grow: 1;
     opacity: 1;
-    margin: 0 0.5vw;
+    margin: 0 0.5vw 0.5vw;
     box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2);
     transition: transform 0.5s ease-out, opacity 0.5s;
 }
