--- a/src/app/art/art-list/art-list.component.css
+++ b/src/app/art/art-list/art-list.component.css
@@ -26,8 +26,8 @@
     opacity: 1;
     overflow: hidden;
     transform: translate3d(0, 0, 0);
-    -webkit-transition: transform 0.5s ease-out, opacity 0.5s ease-out;
-    transition: transform 0.5s ease-out, opacity 0.5s ease-out;
+    -webkit-transition: transform 0.5s ease-out;
+    transition: transform 0.5s ease-out;
 }
 
 .image-wrapper img {
@@ -47,7 +47,7 @@
     height: 100%;
     padding: 5px 10px 20px;
     background: rgba(7, 7, 7, 0.5);
-    color: #ffff;
+    color: #ffffff;
     font-size: 2em;
     padding: 25px;
     opacity: 0;
