--- a/src/app/blog/blog-list/blog-list.component.html
+++ b/src/app/blog/blog-list/blog-list.component.html
@@ -6,7 +6,7 @@
         <h2>My blogs posts</h2>
         <i class="icon-ios-chatboxes"></i>
       </div>
-      <div class="blog-card featured-blog">
+      <div class="blog-card feature-content featured-blog">
         <div class="title">
           <h3>Sample Blog</h3>
           <a routerLink="/blog/new-article">
