--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -6,7 +6,7 @@
         <h2>My hobby projects</h2>
         <i class="icon-social-github"></i>
       </div>
-      <div class="project-card featured-project">
+      <div class="project-card feature-content featured-project">
         <div class="title">
           <h3>My Portfolio</h3>
           <a class="github-link" href="https://github.com/Jayabratha/my-portfolio">
