--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="home-content center-stage" [ngClass]="{'hide': !(headerState.state === HEADER_STATE.Fixed)}">
+<div class="home-content center-stage">
   <div class="overview-wrapper">
     <div class="overview clearfix art-overview" [class.above-view]="steps[1].isAboveView" [class.below-view]="steps[1].isBelowView"
       viewportCheck [padding]=padding [checkAboveView]=true >
@@ -101,7 +101,7 @@
     </div>
   </div>
 </div>
-<div class="scroll-indicator" [hidden]="isMobile || headerState.state === HEADER_STATE.Initial">
+<div class="scroll-indicator" *ngIf="!(isMobile || headerState.state === HEADER_STATE.Initial)">
   <div class="me home-anchors" [ngClass]="{'active': stepCount === 0}" (click)="setStepCount(0)">
     <div class="inner-dot"></div>
   </div>
