--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -25,8 +25,7 @@
 .project-card.featured-project {
     position: relative;
     float: left;
-    width: 60%;
-    min-height: 16em;
+    min-height: 0;
     font-size: 1.25em;
     padding: 1em;
     box-shadow: none;
