--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -50,7 +50,7 @@
   <section class="my-tiles">
     <div class="tiles-wrapper">
       <h2>Follow me on</h2>
-      <div class="tiles-container" viewportCheck [padding]=100 (enteredViewport)="animateTiles()">
+      <div class="tiles-container" viewportCheck (enteredViewport)="animateTiles()">
         <ul class="flex-wrapper">
           <li #tileItem class="tile-wrapper facebook hide">
             <a href="https://www.facebook.com/jayabratha.saha">
