--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -32,9 +32,6 @@
     <div class="skills-wrapper" viewportCheck (enteredViewport)="animateSkills()">
       <div class="tiles-container">
         <ul class="flex-wrapper skill-list">
-          <li #skillItem class="tile-wrapper small angular hide">
-            <i class="icon-social-angular"></i>
-          </li>
           <li #skillItem class="tile-wrapper small js hide">
             <i class="icon-social-javascript"></i>
           </li>
@@ -44,11 +41,32 @@
           <li #skillItem class="tile-wrapper small css hide">
             <i class="icon-social-css3"></i>
           </li>
-          <li #skillItem class="tile-wrapper small firebase hide">
-            <img src="../../assets/firebase-logo.png" alt="Firebase" />
+          <li #skillItem class="tile-wrapper small angular hide">
+            <i class="icon-social-angular"></i>
+          </li>
+          <li #skillItem class="tile-wrapper small react hide">
+            <img src="../../assets/react-logo.svg" alt="React" />
           </li>
           <li #skillItem class="tile-wrapper small ts hide">
             <img src="../../assets/typescript-logo.png" alt="TypeScript" />
+          </li>
+          <li #skillItem class="tile-wrapper small nodejs hide">
+            <img src="../../assets/nodejs-logo.png" alt="NodeJS" />
+          </li>
+          <li #skillItem class="tile-wrapper small sass hide">
+            <img src="../../assets/sass-logo.png" alt="Sass" />
+          </li>
+          <li #skillItem class="tile-wrapper small firebase hide">
+            <img src="../../assets/firebase-logo.png" alt="Firebase" />
+          </li>
+          <li #skillItem class="tile-wrapper small pwa hide">
+            <img src="../../assets/pwa-logo.png" alt="PWA" />
+          </li>
+          <li #skillItem class="tile-wrapper small mongodb hide">
+            <img src="../../assets/mongodb-logo.jpeg" alt="MongoDB" />
+          </li>
+          <li #skillItem class="tile-wrapper small jasmine hide">
+            <img src="../../assets/jasmine-logo.png" alt="Jasmine" />
           </li>
         </ul>
       </div>
