--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -152,25 +152,32 @@ p.sub_desc {
     justify-content: space-between;
     align-items: center;
     overflow: hidden;
+    flex-wrap: wrap;
+    margin-right: -0.5vw;
+    padding: 1vw 0;
 }
 
 .tile-wrapper {
     background-size: 200px;
-    height: 20vw;
-    width: 25%;
-    max-height: 13em;
+    height: 22vw;
+    width: 22vw;
+    max-width: 200px;
+    max-height: 200px;
     position: relative;
     transform: translate3d(0, 0, 0);
-    flex-grow: 1;
     opacity: 1;
-    margin: 0 0.5vw 0.5vw;
+    margin: 0 0.5vw 0.5vw 0;
     box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2);
     transition: transform 0.5s ease-out, opacity 0.5s;
 }
 
 .tile-wrapper.small {
-    width: 7em;
-    height: 8em;
+    width: 10vw;
+    height: 10vw;
+    min-width: 100px;
+    min-height: 100px;
+    max-width: 150px;
+    max-height: 150px;
 }
 
 .tile-wrapper.hide {
@@ -192,11 +199,10 @@ p.sub_desc {
 }
 
 .tile-wrapper.small i {
-    font-size: 5em;
+    font-size: 5vw;
 }
 
-.tile-wrapper:hover i,
-.tile-wrapper:hover img {
+.tile-wrapper:hover i, .tile-wrapper:hover img {
     transform: scale3d(1.2, 1.2, 1);
 }
 
@@ -218,7 +224,7 @@ p.sub_desc {
 }
 
 .tile-wrapper.small img {
-    height: 5em;
+    height: 5vw;
 }
 
 .alert {
@@ -233,6 +239,7 @@ p.sub_desc {
     margin-left: auto;
     margin-right: auto;
 }
+
 .dp {
     position: relative;
     float: left;
@@ -241,15 +248,18 @@ p.sub_desc {
     overflow: hidden;
     z-index: 5;
 }
+
 .dp>img {
     height: 100%;
     float: right;
 }
+
 ul {
     margin: 0;
     padding: 0;
     list-style: none;
 }
+
 p {
     line-height: 1.7em;
     padding: 0 0 2em;
@@ -260,24 +270,27 @@ p {
     color: #212121;
     margin: 0;
 }
-.clearfix:before,
-.clearfix:after {
+
+.clearfix:before, .clearfix:after {
     content: '';
     display: table;
     clear: both;
 }
+
 /* Button Styles - Start */
+
 .button-wrapper {
     display: inline-block;
     position: relative;
     border: 2px solid #212121;
     min-height: 40px;
 }
+
 .button-wrapper .background {
     height: 100%;
     position: absolute;
     width: 0;
-    background-color: #212121; 
+    background-color: #212121;
     -webkit-transition: width 0.2s ease-in;
     -moz-transition: width 0.2s ease-in;
     transition: width 0.2s ease-in;
@@ -305,10 +318,11 @@ button {
 .button-wrapper:hover button {
     color: #FFFFFF;
 }
+
 /* Button Styles - End */
 
-
 /* Input Styles - start */
+
 .input-wrapper {
     margin: 0 0 10px;
 }
@@ -345,16 +359,15 @@ button {
     outline: none;
 }
 
-.show-error .input-wrapper input.ng-invalid+.border-highlight,
-.show-error .input-wrapper textarea.ng-invalid+.border-highlight,
-.input-wrapper input.ng-invalid.ng-touched+.border-highlight,
-.input-wrapper textarea.ng-invalid.ng-touched+.border-highlight {
+.show-error .input-wrapper input.ng-invalid+.border-highlight, .show-error .input-wrapper textarea.ng-invalid+.border-highlight, .input-wrapper input.ng-invalid.ng-touched+.border-highlight, .input-wrapper textarea.ng-invalid.ng-touched+.border-highlight {
     width: 100%;
     background: #F44336;
 }
+
 /* Input Styles - end */
 
 /* Scroll Directive Styles - Start */
+
 .view-check {
     -webkit-transform: translateY(0);
     -moz-transform: translateY(0);
@@ -363,42 +376,46 @@ button {
     transition: transform 0.7s ease-out, opacity 0.7s;
     opacity: 1;
 }
+
 .below-view {
     -webkit-transform: translateY(100px);
     -moz-transform: translateY(100px);
     -ms-transform: translateY(100px);
-   transform: translateY(100px);
-   opacity: 0;
+    transform: translateY(100px);
+    opacity: 0;
 }
+
 .above-view {
     -webkit-transform: translateY(-100px);
     -moz-transform: translateY(-100px);
     -ms-transform: translateY(-100px);
-   transform: translateY(-100px);
-   opacity: 0;
+    transform: translateY(-100px);
+    opacity: 0;
 }
+
 .overview.below-view {
     -webkit-transform: translateY(200px);
     -moz-transform: translateY(200px);
     -ms-transform: translateY(200px);
-   transform: translateY(200px);
-   opacity: 0;
+    transform: translateY(200px);
+    opacity: 0;
 }
+
 .overview.above-view {
     -webkit-transform: translateY(200px);
     -moz-transform: translateY(200px);
     -ms-transform: translateY(200px);
-   transform: translateY(-200px);
-   opacity: 0;
+    transform: translateY(-200px);
+    opacity: 0;
 }
+
 /* Scroll Directive Styles - End */
 
-
-@keyframes placeHolderShimmer{
-    0%{
+@keyframes placeHolderShimmer {
+    0% {
         background-position: -468px 0
     }
-    100%{
+    100% {
         background-position: 468px 0
     }
 }
@@ -414,8 +431,8 @@ button {
     position: relative;
 }
 
-
 /* Tab Styles - Start */
+
 @media (max-width: 950px) {
     .center-stage {
         width: 96%;
@@ -427,12 +444,10 @@ button {
     .dp {
         width: 100%;
     }
-
     .dp>img {
         width: 100%;
         height: auto;
     }
-
     .main-content {
         padding-top: 1em;
         margin-bottom: 0;
@@ -456,29 +471,37 @@ button {
         width: 100%;
         padding-left: 0;
         padding-top: 1em;
+        min-height: 100%;
+        height: auto;
+        margin-bottom: 3em;
     }
     .overview.below-view {
         -webkit-transform: translateY(50px);
         -moz-transform: translateY(50px);
         -ms-transform: translateY(50px);
-       transform: translateY(50px);
-       opacity: 0;
+        transform: translateY(50px);
+        opacity: 0;
     }
     .overview.above-view {
         -webkit-transform: translateY(0);
         -moz-transform: translateY(0);
         -ms-transform: translateY(0);
-       transform: translateY(0);
-       opacity: 1;
+        transform: translateY(0);
+        opacity: 1;
     }
-
     .tile-wrapper i {
         font-size: 4em;
     }
-
     .tile-wrapper img {
         height: 4em;
     }
+    .tile-wrapper.small i {
+        font-size: 10vw;
+    }
+    .tile-wrapper.small img {
+        height: 10vw;
+    }
+
 }
 
 /* Tab Styles - End */
