--- a/src/app/blog/blog-list/blog-list.component.html
+++ b/src/app/blog/blog-list/blog-list.component.html
@@ -19,4 +19,21 @@
       </div>
     </div>
   </div>
+  <section class="blog-list">
+    <h2>All Blog posts</h2>
+    <ul>
+      <li *ngFor="let post of posts | async">
+        <div class="blog-card view-check below-view" viewportCheck>
+          <div class="cover-art"></div>
+          <div class="info">
+            <div class="title">
+              <h3>{{post.title}}</h3>
+            </div>
+            <div class="desc">{{post.summary}}</div>
+            <div class="date">{{post.date | date}}</div>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </section>
 </div>
