--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,7 +14,7 @@
 
 .feature-wrapper {
     position: relative;
-    overflow: visible;
+    overflow: hidden;
     margin: 1.2em 0;
 }
 
@@ -80,6 +80,7 @@
     float: left;
     padding-left: 1em;
     height: 100%;
+    margin-bottom: 2em;
 }
 
 .content.art-content .main {
@@ -299,7 +300,7 @@ p {
 button {
     position: relative;
     display: block;
-    padding: 15px 20px;
+    padding: 12px 20px;
     background: transparent;
     margin: auto;
     font-family: 'Playfair Display', serif;
