--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -77,11 +77,12 @@
 
 .desc {
     padding: 0.5em 0 1.5em;
+    color: #6f6f6f;
 }
 
 .footer {
     position: absolute;
-    bottom: 1em;
+    bottom: 1.5em;
 }
 
 .color-band {
@@ -102,7 +103,7 @@
 }
 
 .tag-list {
-    margin: 1em 0;
+    margin: 1em 0 1.5em;
 }
 
 .tag-list li {
